# Yoke

./: .buildinfo  .gitattributes  .gitignore  .gitlab-ci.yml  LICENSE.txt  README.md  darwin_environment.yml  environment.yml  genindex.html  harnesses.html  index.html  lambda_environment.yml  makefilelists.py  modules.html  objects.inv  osx_environment.yml  osx_environment_temp.yml  py-modindex.html  pyproject.toml  sample_environment.yml  search.html  searchindex.js  start_study.html  torch_training_utils.py  yoke.datasets.html  yoke.helpers.html  yoke.html  yoke.losses.html  yoke.models.html  yoke.models.vit.html  yoke.models.vit.swin.html  yoke_env_setup.sh
.doctrees/: environment.pickle  harnesses.doctree  index.doctree  modules.doctree  start_study.doctree  yoke.datasets.doctree  yoke.doctree  yoke.helpers.doctree  yoke.losses.doctree  yoke.models.doctree  yoke.models.vit.doctree  yoke.models.vit.swin.doctree
.github/workflows/: docbuild.yml  python-package-conda.yml  yoke_install_test_lint.yml
_modules/: index.html
_modules/yoke/: lr_schedulers.html  parallel_utils.html  scheduled_sampling.html  torch_training_utils.html
_sources/: harnesses.rst.txt  index.rst.txt  modules.rst.txt  start_study.rst.txt  yoke.datasets.rst.txt  yoke.helpers.rst.txt  yoke.losses.rst.txt  yoke.models.rst.txt  yoke.models.vit.rst.txt  yoke.models.vit.swin.rst.txt  yoke.rst.txt
applications/: makefilelists.py  makelists_specific_index.py  makelists_unique_prefix.py
applications/evaluation/: README.md  TandV.input  TandVplot.py  image_prediction_comparison.py  img_compare.input  img_compare_loderunner.input  lsc_anime.input  lsc_loderunner_anime.py  lsc_loderunner_create_gif.input  lsc_loderunner_create_gif.py  parameters2image.py  tk_GUI_example.py  tk_parameters2image_slider.py
applications/filelists/: lsc240420_idx00100_test_10pct.txt  lsc240420_idx00100_train_80pct.txt  lsc240420_idx00100_val_10pct.txt  lsc240420_prefixes_test_10pct.txt  lsc240420_prefixes_train_80pct.txt  lsc240420_prefixes_train_sample.txt  lsc240420_prefixes_validation_10pct.txt  lsc240420_test_10pct.txt  lsc240420_val_10pct.txt  lsc240420_val_sample.txt  nc231213_test_10pct.txt  nc231213_train_sample.txt
applications/harnesses/: START_study.py  __init__.py
applications/normalization/: generate_lsc_normalization.py  sample_normalization.input
applications/viewers/: __init__.py  lsc_anime.py  lsc_single_image.py  lsc_single_img.input  nc_single_image.py  nc_visar_plot.py
datasets/: lsc_dataset.py  nestedcyl_dataset.py
docs/: conf.py  index.rst
docs/source/: conf.py  index.rst  modules.rst  start_study.rst  tests.datasets.rst  tests.evaluation.rst  tests.helpers.rst  tests.metrics.rst  tests.models.rst  tests.models.vit.rst  tests.models.vit.swin.rst  tests.rst
evaluation/: TandVplot.py  image_prediction_comparison.py  parameters2image_slider.py  tk_GUI_example.py  tk_parameters2image_slider.py
filelists/: lsc240420_test_10pct.txt  lsc240420_train_80pct.txt  lsc240420_val_10pct.txt  nc231213_test_10pct.txt  nc231213_train_80pct.txt  nc231213_val_10pct.txt
harnesses/lsc_rho_surrogate/: START_study.py  hyperparameters.csv  train_lsc_surrogate.py  training_START.input  training_START.slurm  training_input.tmpl  training_slurm.tmpl
harnesses/lsc_rho_surrogate2/: hyperparameters.csv  training_START.input  training_START.slurm  training_input.tmpl  training_slurm.tmpl
harnesses/lsc_rho_surrogate_gpu_opt/: hyperparameters.csv  train_lsc_surrogate2.py  train_lsc_surrogate_LRsched.py  training_START.input  training_START.slurm  training_input.tmpl  training_slurm.tmpl
harnesses/nc_density_CNN/: hyperparameters.csv  train_nc_density_CNN.py  training_START.input  training_START.slurm  training_input.tmpl  training_slurm.tmpl
metrics/: sc_metrics.csv
models/: CNNmodules.py  cnn_utils.py  surrogateCNNmodules.py
models/vit/: embedding_encoders.py  patch_embed.py  patch_manipulation.py
normalization/: generate_lsc_normalization.py
src/datasets/: lsc_dataset.py
src/evaluation/: tk_GUI_example.py
src/metrics/: shaped_charge_metrics.py  test_scmetrics.py
src/models/: surrogateCNNmodules.py
src/yoke/: __init__.py  lr_schedulers.py  parallel_utils.py  scheduled_sampling.py  torch_training_utils.py
tests/: __init__.py  test_LRschedulers.py  test_checkpointing.py  test_parallel_utils.py  test_scheduled_sampling.py  test_training_utils.py  test_varagg.py
tests/datasets/: __init__.py  test_fn_LSCnpz2key.py  test_jwl_dataset.py  test_load_npz_dataset.py  test_lsc_datasets.py  test_lsc_sequential.py  test_transforms.py
tests/evaluation/: __init__.py
tests/helpers/: test_cli.py  test_strings.py  test_training_design.py
tests/losses/: __init__.py  (+2 more)
unit_test_pytests/: sorted_list.py  tensor_operations.py  test_sorted_list.py  test_tensor_operations.py
viewers/: lsc_single_image.py  nc_single_image.py  nc_visar_plot.py
(+259 files in other folders)
