[build-system]
requires = ["flit_core >=3.9.0,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "yoke"
description = "Sets of models and datasets with training and evaluation scripts."
version = "0.0.0"
authors = [
    {name = "Hickmann, Kyle", email = "hickmank@lanl.gov"},
]
dependencies = [
    "flit_core >=3.9.0",
    "requests",
    "docutils",
    "tomli-w",
    "pip",
]
requires-python = ">=3.8"
readme = "README.md"
license = {file = "LICENSE.txt"}
classifiers = ["Private :: Do Not Upload",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]
#dynamic = ['version']

[project.optional-dependencies]
test = [
	"testpath",
	"pytest>=2.7.3",
	"pytest-cov",
	"tomli",
]
# doc = [
# 	"sphinx",
# 	"sphinxcontrib_github_alt",
# 	"pygments-github-lexers",  # TOML highlighting
# ]

[project.urls]
#Documentation = "https://"
Source = "https://gitlab.lanl.gov/multiphysmultimatapps/yoke"
#Changelog = "https://"

#[project.scripts]
#flit = "flit:main"

[tool.ruff]
line-length = 89

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 89

[tool.ruff.lint]
select = [
    "E",
    "F",
    "D",
    "UP",
    "W"]

[tool.ruff.lint.pydocstyle]
convention = "google"